# stiven-tatu-backend

./: .gitignore  main.py  pyproject.toml
adapters/services/: EmailSenderAdapter.py  EmailVerifierAdapter.py  TurnstileCaptchaAdapter.py
controllers/src/: app.py
controllers/src/dependencies/: request_quote_dependencies.py  schedule_appointment_dependencies.py
controllers/src/dtos/: schedule_request.py
controllers/src/exceptions/: handler_exceptions.py
controllers/src/routes/: schedule_appointment.py
domain/src/entities/: schedule_appointment.py
domain/src/exceptions/: schedule_request_exceptions.py
domain/src/ports/: CaptchaService.py  EmailSenderService.py  EmailVerifierService.py
settings/: env_variables.py
templates/: get_admin_email_template.py  get_customer_email_template.py  get_email_footer.py
use_cases/src/schedule_appointment/: input.py  use_case.py
